--- a/src/container/InstallationManage/InstallationContent/PageContentMain/style.less
+++ b/src/container/InstallationManage/InstallationContent/PageContentMain/style.less
@@ -1,12 +1,24 @@
+.pageContentMain :global(.ant-table-thead > tr > th, .ant-table-tbody > tr > td) {
+  width: 300px;
+}
+
 .blueTxt {
   color: #008dff
 }
+
 .redTxt {
   color: #f81d22;
 }
-.blueTxt:hover, .redTxt:hover{
+
+.greyTxt {
+  color: #aaa;
+}
+
+.blueTxt:hover,
+.redTxt:hover {
   cursor: pointer;
 }
-.marginRight10{
+
+.marginRight10 {
   margin-right: 10px;
 }
