--- a/src/container/InstallationManage/InstallationContent/PageContentMain/style.less
+++ b/src/container/InstallationManage/InstallationContent/PageContentMain/style.less
@@ -1,5 +1,10 @@
-.pageContentMain :global(.ant-table-thead > tr > th, .ant-table-tbody > tr > td) {
-  width: 300px;
+.pageContentMain {
+  :global {
+    .ant-table-bordered .ant-table-thead>tr>th,
+    .ant-table-bordered .ant-table-tbody>tr>td {
+      width: 300px;
+    }
+  }
 }
 
 .blueTxt {
